<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="key_data_label">aware_data_label</string>
    <string name="key_primary_camera">aware_primary_camera</string>
    <string name="key_secondary_camera">aware_secondary_camera</string>
    <string name="key_video_bitrate">aware_video_bitrate</string>
    <string name="key_video_frame_rate">aware_video_frame_rate</string>
    <string name="key_video_length">aware_video_length</string>
    <string name="key_camera_sensor_enabled">aware_camera_sensor_enabled</string>

    <string name="pref_header_camera">Camera</string>

    <string name="pref_title_dual_camera">Enable dual camera recording</string>
    <string name="pref_description_dual_camera">Option for recording both front and back
        camera at the same time.</string>

    <string name="pref_title_data_label">Data label</string>
    <string name="pref_default_data_label"></string>

    <string name="pref_title_primary_camera_face">Primary camera direction</string>
    <string name="pref_title_secondary_camera_face">Secondary camera direction</string>

    <string-array name="pref_list_camera_primary_face_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_list_primary_camera_faces">
        <item>Front Facing</item>
        <item>Back Facing</item>
    </string-array>

    <string-array name="pref_list_secondary_camera_faces">
        <item>Front Facing</item>
        <item>Back Facing</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_list_camera_secondary_face_values">
        <item>0</item>
        <item>1</item>
        <item>-1</item>
    </string-array>


    <string name="pref_description_bitrate">Video encoding bit rate in bits per second</string>
    <string name="pref_bitrate">1000000</string>

    <string name="pref_description_frame_rate">Video frame rate</string>
    <string name="pref_frame_rate">30</string>

    <string name="pref_video_length">10</string>
    <string name="pref_description_video_length">Video length in seconds</string>
    <string name="pref_camera_enabled_summary">Turns video recording on/off</string>
    <string name="pref_camera_enabled_title">Enabled</string>
    <string-array name="pref_list_second_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
</resources>