<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_camera_faces"
        android:entryValues="@array/pref_list_camera_face_values"
        android:key="@string/key_primary_camera"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_default_camera_face" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_camera_faces"
        android:entryValues="@array/pref_list_camera_face_values"
        android:key="@string/key_secondary_camera"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_default_camera_face" />

    <EditTextPreference
        android:defaultValue="@string/pref_bitrate"
        android:inputType="number"
        android:key="@string/key_video_bitrate"
        android:maxLines="1"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:title="@string/pref_description_bitrate" />

    <EditTextPreference
        android:defaultValue="@string/pref_frame_rate"
        android:inputType="number"
        android:key="@string/key_video_frame_rate"
        android:maxLines="1"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:title="@string/pref_description_frame_rate" />

    <EditTextPreference
        android:defaultValue="@string/pref_video_length"
        android:inputType="numberDecimal"
        android:key="@string/key_video_length"
        android:maxLines="1"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:title="@string/pref_description_video_length" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_data_label"
        android:inputType="text"
        android:key="@string/key_data_label"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true"
        android:title="@string/pref_title_data_label" />
</PreferenceScreen>